--- a/source/catalog.html
+++ b/source/catalog.html
@@ -66,43 +66,45 @@
 
   </svg>
 
-  <header class="main-header container main-container">
-    <div class="main-header__wrapper">
-      <a class="main-header__logo" href="#">
-        <picture>
-          <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg" width="202" height="59">
-          <source media="(min-width: 768px)" srcset="img/logo-tablet.svg" width="174" height="51">
-          <img class="main-header__logo-image" src="img/logo-mobile.svg" alt="Логотип" width="33" height="37">
-        </picture>
-        <img class="main-header__logo-text" src="img/logo text.png" alt="Логотип название" width="101" height="18">
-      </a>
-    </div>
-    <nav class="main-nav main-nav--opened">
-      <button class="main-nav__toggle"><span class="visually-hidden">Открыть меню</span></button>
-      <div class="main-nav__wrapper">
-        <ul class="main-nav__list site-list">
-          <li class="main-nav__item site-list__item--active">
-            <a class="main-nav__link main-nav__link-catalog" href="index.html">
-              Главная
-            </a>
-          </li>
-          <li class="main-nav__item">
-            <a class="main-nav__link main-nav__link-catalog" href="catalog.html">
-              Каталог продукции
-            </a>
-          </li>
-          <li class="main-nav__item">
-            <a class="main-nav__link main-nav__link-catalog" href="form.html">
-              Подбор программы
-            </a>
-          </li>
-        </ul>
+  <header class="container">
+    <div class="main-header">
+      <div class="main-header__wrapper">
+        <a class="main-header__logo" href="#">
+          <picture>
+            <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg" width="202" height="59">
+            <source media="(min-width: 768px)" srcset="img/logo-tablet.svg" width="174" height="51">
+            <img class="main-header__logo-image" src="img/logo-mobile.svg" alt="Логотип" width="33" height="37">
+          </picture>
+          <img class="main-header__logo-text" src="img/logo-text.png" alt="Логотип название" width="101" height="18">
+        </a>
       </div>
-    </nav>
+      <nav class="main-nav main-nav--closed">
+        <button class="main-nav__toggle"><span class="visually-hidden">Открыть меню</span></button>
+        <div class="main-nav__wrapper">
+          <ul class="main-nav__list site-list">
+            <li class="main-nav__item site-list__item">
+              <a class="main-nav__link main-nav__link-catalog" href="index.html">
+                Главная
+              </a>
+            </li>
+            <li class="main-nav__item main-nav__item--active">
+              <a class="main-nav__link main-nav__link-catalog" href="catalog.html">
+                Каталог продукции
+              </a>
+            </li>
+            <li class="main-nav__item">
+              <a class="main-nav__link main-nav__link-catalog" href="form.html">
+                Подбор программы
+              </a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
   </header>
 
-  <main class="main-container">
-    <h1 class="visually-hidden container">Продукция</h1>
+  <main class="container">
+    <h1 class="visually-hidden">Продукция</h1>
 
     <section class="catalog">
       <div class="catalog__wrapper">
@@ -122,7 +124,7 @@
               </a>
               <div class="catalog__text catalog__odd">
                 <a class="catalog__title-card-link" href="#">
-                  <h3 class="catalog__title-card">Cat enegy pro 500 г</h3>
+                  <h3 class="catalog__title-card">Cat energy pro 500 г</h3>
                 </a>
                 <dl class="catalog__info-list">
                   <div class="catalog__info-item">
@@ -156,7 +158,7 @@
               </a>
               <div class="catalog__text catalog__even">
                 <a href="#" class="catalog__title-card-link">
-                  <h3 class="catalog__title-card">Cat enegy pro 1000 г</h3>
+                  <h3 class="catalog__title-card">Cat energy pro 1000 г</h3>
                 </a>
                 <dl class="catalog__info-list">
                   <div class="catalog__info-item">
@@ -190,7 +192,7 @@
               </a>
               <div class="catalog__text catalog__odd">
                 <a class="catalog__title-card-link" href="#">
-                  <h3 class="catalog__title-card">Cat enegy pro 500 г</h3>
+                  <h3 class="catalog__title-card">Cat energy pro 500 г</h3>
                 </a>
                 <dl class="catalog__info-list">
                   <div class="catalog__info-item">
@@ -224,7 +226,7 @@
               </a>
               <div class="catalog__text catalog__even">
                 <a href="#" class="catalog__title-card-link">
-                  <h3 class="catalog__title-card">Cat enegy pro 1000 г</h3>
+                  <h3 class="catalog__title-card">Cat energy pro 1000 г</h3>
                 </a>
                 <dl class="catalog__info-list">
                   <div class="catalog__info-item">
@@ -258,7 +260,7 @@
               </a>
               <div class="catalog__text catalog__odd">
                 <a href="#" class="catalog__title-card-link">
-                  <h3 class="catalog__title-card">Cat enegy slim 500 г</h3>
+                  <h3 class="catalog__title-card">Cat energy slim 500 г</h3>
                 </a>
                 <dl class="catalog__info-list">
                   <div class="catalog__info-item">
@@ -271,7 +273,7 @@
                   </div>
                   <div class="catalog__info-item">
                     <dt class="catalog__info-description">Цена</dt>
-                    <dd class="catalog__info-value">500 р</dd>
+                    <dd class="catalog__info-value">400 р</dd>
                   </div>
                 </dl>
               </div>
@@ -292,7 +294,7 @@
               </a>
               <div class="catalog__text catalog__even">
                 <a href="#" class="catalog__title-card-link">
-                  <h3 class="catalog__title-card">Cat enegy slim 1000 г</h3>
+                  <h3 class="catalog__title-card">Cat energy slim 1000 г</h3>
                 </a>
                 <dl class="catalog__info-list">
                   <div class="catalog__info-item">
@@ -320,13 +322,13 @@
                     srcset="img/catalog/catalog-slim-500-rice-tablet.png 1x, img/catalog/catalog-slim-500-rice-tablet@2x.png 2x"
                     width="163" height="174">
                   <img src="img/catalog/catalog-slim-500-rice-mobile.png"
-                    srcset="img/catalog/catalog-slim-500-rice-mobile@2x.png 2x" alt="Пример продукции" width="68"
-                    height="78">
+                    srcset="img/catalog/catalog-slim-500-rice-mobile@2x.png 2x" alt="Пример продукции" width="72"
+                    height="84">
                 </picture>
               </a>
               <div class="catalog__text catalog__odd">
                 <a href="#" class="catalog__title-card-link">
-                  <h3 class="catalog__title-card">Cat enegy slim 500 г</h3>
+                  <h3 class="catalog__title-card">Cat energy slim 500 г</h3>
                 </a>
                 <dl class="catalog__info-list">
                   <div class="catalog__info-item">
@@ -349,9 +351,8 @@
           <li class="catalog__item catalog__block-show-all">
             <button class="catalog__button-show"> </button>
             <h3 class="catalog__show-product">Показать еще 100500 товаров</h3>
-            <p class="catalog__many-flavors">На самом деле вкусов гораздо больше</p>
+            <p class="catalog__many-flavors">На самом деле вкусов гораздо больше!</p>
             <button class="catalog__show-all"> <span>Показать все </span></button>
-            <div>
           </li>
         </ul>
       </div>
@@ -366,7 +367,7 @@
                 <h3 class="additional-goods__card-title">Сахарозаменитель</h3>
                 <dl class="additional-goods__card-list">
                   <div class="additional-goods__card-item">
-                    <dt class="additional-goods__card-description">1 упаковка (100г)</dt>
+                    <dt class="additional-goods__card-description">1 упаковка (100 г)</dt>
                     <dd class="additional-goods__card-price">200 р</dd>
                   </div>
                 </dl>
@@ -412,10 +413,10 @@
           </ul>
           <div class="additional-goods__gift">
             <picture>
-              <img src="img/catalog/icon-gift.png" srcset="img/catalog/icon-gift@2x.png 2x" alt="Подарок" width="78"
+              <img class="additional-goods__gift-image" src="img/catalog/icon-gift.png" srcset="img/catalog/icon-gift@2x.png 2x" alt="Подарок" width="78"
                 height="80">
             </picture>
-            <p class="additional-goods__gift-text">Заказите все и получите чехол для кота в подарок!</p>
+            <p class="additional-goods__gift-text">Заказите все <br> и получите чехол для кота в подарок!</p>
           </div>
         </div>
       </div>
@@ -428,10 +429,10 @@
       <div class="contacts__wrapper">
         <h2 class="visually-hidden"> Контакты компании</h2>
         <div class="contacts__info contacts__info-catalog">
-          <p class="contacts__cooperation">приглашаем к сотрудничеству дилеров!</p>
-          <p class="contacts__address">ул. Большая
-            Конюшенная, д. 19/8
-            Санкт-Петербург</p>
+          <p class="contacts__cooperation">приглашаем <br> к сотрудничеству дилеров!</p>
+          <p class="contacts__address"> <span>ул. Большая</span>
+            <span>Конюшенная, д. 19/8</span>
+            <span>Санкт-Петербург</span></p>
         </div>
         <div class="contacts__map"></div>
       </div>
