--- a/source/form.html
+++ b/source/form.html
@@ -77,39 +77,41 @@
 
   </svg>
 
-  <header class="main-header container main-container">
-    <div class="main-header__wrapper">
-      <a class="main-header__logo" href="#">
-        <picture>
-          <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg" width="202" height="59">
-          <source media="(min-width: 768px)" srcset="img/logo-tablet.svg" width="174" height="51">
-          <img class="main-header__logo-image" src="img/logo-mobile.svg" alt="Логотип" width="33" height="37">
-        </picture>
-        <img class="main-header__logo-text" src="img/logo text.png" alt="Логотип название" width="101" height="18">
-      </a>
-    </div>
-    <nav class="main-nav main-nav--opened">
-      <button class="main-nav__toggle"><span class="visually-hidden">Открыть меню</span></button>
-      <div class="main-nav__wrapper">
-        <ul class="main-nav__list site-list">
-          <li class="main-nav__item site-list__item--active">
-            <a class="main-nav__link main-nav__link-catalog" href="index.html">
-              Главная
-            </a>
-          </li>
-          <li class="main-nav__item">
-            <a class="main-nav__link main-nav__link-catalog" href="catalog.html">
-              Каталог продукции
-            </a>
-          </li>
-          <li class="main-nav__item">
-            <a class="main-nav__link main-nav__link-catalog" href="form.html">
-              Подбор программы
-            </a>
-          </li>
-        </ul>
+  <header class="container">
+    <div class="main-header">
+      <div class="main-header__wrapper">
+        <a class="main-header__logo" href="#">
+          <picture>
+            <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg" width="202" height="59">
+            <source media="(min-width: 768px)" srcset="img/logo-tablet.svg" width="174" height="51">
+            <img class="main-header__logo-image" src="img/logo-mobile.svg" alt="Логотип" width="33" height="37">
+          </picture>
+          <img class="main-header__logo-text" src="img/logo-text.png" alt="Логотип название" width="101" height="18">
+        </a>
       </div>
-    </nav>
+      <nav class="main-nav main-nav--closed">
+        <button class="main-nav__toggle"><span class="visually-hidden">Открыть меню</span></button>
+        <div class="main-nav__wrapper">
+          <ul class="main-nav__list site-list">
+            <li class="main-nav__item site-list__item">
+              <a class="main-nav__link main-nav__link-catalog" href="index.html">
+                Главная
+              </a>
+            </li>
+            <li class="main-nav__item">
+              <a class="main-nav__link main-nav__link-catalog" href="catalog.html">
+                Каталог продукции
+              </a>
+            </li>
+            <li class="main-nav__item main-nav__item--active">
+              <a class="main-nav__link main-nav__link-catalog" href="form.html">
+                Подбор программы
+              </a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
   </header>
 
   <main class="main-container container">
@@ -174,7 +176,7 @@
             <p class="program-selection__contact program-selection__contact-phone">
               <label class="program-selection__contact-label" for="user-number">Телефон:*</label>
               <input class="program-selection__contact-value program-selection__contact-value-phone" type="text"
-                id="user-number" placeholder="8(960) 900-60-90">
+                id="user-number" placeholder="8 (960) 900-60-90">
               <svg class="program-selection__contact-icon" width="15" height="16">
                 <use href="#icon-phone"></use>
               </svg>
@@ -184,7 +186,7 @@
 
         <fieldset class="program-selection__form-group">
           <h3 class="program-selection__comment-title">Комментарий</h3>
-          <textarea class="program-selection__comment-value" name="" cols="30" rows="10"
+          <textarea class="program-selection__comment-value" name="info-cat" cols="30" rows="10"
             placeholder="Расскажите обо всех повадках кота"></textarea>
         </fieldset>
 
@@ -238,10 +240,10 @@
       <div class="contacts__wrapper">
         <h2 class="visually-hidden"> Контакты компании</h2>
         <div class="contacts__info contacts__info-catalog">
-          <p class="contacts__cooperation">приглашаем к сотрудничеству дилеров!</p>
-          <p class="contacts__address">ул. Большая
-            Конюшенная, д. 19/8
-            Санкт-Петербург</p>
+          <p class="contacts__cooperation">приглашаем <br>к сотрудничеству дилеров!</p>
+          <p class="contacts__address"> <span>ул. Большая</span>
+            <span>Конюшенная, д. 19/8</span>
+            <span>Санкт-Петербург</span></p>
         </div>
         <div class="contacts__map"></div>
       </div>
