--- a/source/index.html
+++ b/source/index.html
@@ -36,7 +36,7 @@
     </symbol>
 
 
-    <symbol id="logo-cat" width="143" height="27" viewBox="0 0 143 27" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <symbol id="logo-cat" viewBox="0 0 143 27" fill="none" xmlns="http://www.w3.org/2000/svg">
       <path
         d="M1.78783 24.4381C0.522508 22.6066 -0.105608 20.4106 2.82917e-05 18.1878V8.92382C-0.1532 6.67709 0.435585 4.44218 1.67609 2.56183C2.9052 1.11085 4.80474 0.441162 7.59818 0.441162C10.3916 0.441162 12.1794 1.11085 13.2968 2.3386C14.5099 3.89364 15.1066 5.84078 14.9728 7.80768V10.04H9.49771V7.47284C9.54193 6.71359 9.42778 5.95344 9.1625 5.24056C9.0207 4.95281 8.79596 4.71401 8.51719 4.55488C8.23841 4.39576 7.91835 4.32359 7.59818 4.34765C6.81601 4.34765 6.25733 4.57088 6.03385 5.12894C5.78108 5.92199 5.66766 6.75276 5.69864 7.58445V19.5271C5.63963 20.334 5.79375 21.1423 6.14559 21.871C6.36906 22.4291 6.92775 22.6523 7.70991 22.6523C8.49208 22.6523 8.93903 22.4291 9.1625 21.871C9.41655 21.1167 9.53016 20.3223 9.49771 19.5271V16.8484H14.9728V19.0807C15.0865 21.0797 14.4932 23.055 13.2968 24.6614C12.1794 26.0007 10.2799 26.6704 7.59818 26.6704C4.91648 26.5588 2.9052 25.8891 1.78783 24.4381Z"
         fill="#111111" />
@@ -121,39 +121,41 @@
 
   </svg>
 
-  <header class="main-header container main-container">
-    <div class="main-header__wrapper">
-      <a class="main-header__logo" href="#">
-        <picture>
-          <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg" width="202" height="59">
-          <source media="(min-width: 768px)" srcset="img/logo-tablet.svg" width="174" height="51">
-          <img class="main-header__logo-image" src="img/logo-mobile.svg" alt="Логотип" width="33" height="37">
-        </picture>
-        <img class="main-header__logo-text" src="img/logo text.png" alt="Логотип название" width="101" height="18">
-      </a>
-    </div>
-    <nav class="main-nav main-nav--opened">
-      <button class="main-nav__toggle"><span class="visually-hidden">Открыть меню</span></button>
-      <div class="main-nav__wrapper">
-        <ul class="main-nav__list site-list">
-          <li class="main-nav__item site-list__item--active">
-            <a class="main-nav__link" href="index.html">
-              Главная
-            </a>
-          </li>
-          <li class="main-nav__item">
-            <a class="main-nav__link" href="catalog.html">
-              Каталог продукции
-            </a>
-          </li>
-          <li class="main-nav__item">
-            <a class="main-nav__link" href="form.html">
-              Подбор программы
-            </a>
-          </li>
-        </ul>
+  <header class="container">
+    <div class="main-header">
+      <div class="main-header__wrapper">
+        <a class="main-header__logo" href="#">
+          <picture>
+            <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg" width="202" height="59">
+            <source media="(min-width: 768px)" srcset="img/logo-tablet.svg" width="174" height="51">
+            <img class="main-header__logo-image" src="img/logo-mobile.svg" alt="Логотип" width="33" height="37">
+          </picture>
+          <img class="main-header__logo-text" src="img/logo-text.png" alt="Логотип название" width="101" height="18">
+        </a>
       </div>
-    </nav>
+      <nav class="main-nav main-nav--closed">
+        <button class="main-nav__toggle"><span class="visually-hidden">Открыть меню</span></button>
+        <div class="main-nav__wrapper">
+          <ul class="main-nav__list site-list">
+            <li class="main-nav__item site-list__item--active">
+              <a class="main-nav__link" href="index.html">
+                Главная
+              </a>
+            </li>
+            <li class="main-nav__item">
+              <a class="main-nav__link" href="catalog.html">
+                Каталог продукции
+              </a>
+            </li>
+            <li class="main-nav__item">
+              <a class="main-nav__link" href="form.html">
+                Подбор программы
+              </a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
   </header>
 
   <main>
@@ -169,7 +171,7 @@
         </div>
         <picture>
           <source media="(min-width: 1440px)"
-            srcset="img/index/production-desctop.png 1x, img/index/production-desctop@2x.png 2x," width="552"
+            srcset="img/index/production-desctop.png 1x, img/index/production-desctop@2x.png 2x" width="552"
             height="499">
           <source media="(min-width: 768px)" srcset="img/index/production.png 1x, img/index/production@2x.png 2x"
             width="709" height="609">
@@ -194,7 +196,8 @@
               <h3 class="type-program__title">Похудение</h3>
               <p class="type-program__description">Ваш кот весит больше собаки и почти утратил способность лазить по
                 деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-              <a class="type-program__transition-catalog" href="#"> <span>каталог slim</span>
+              <a class="type-program__transition-catalog" href="#"> <span
+                  class="type-program__transition-catalog-text">каталог slim</span>
                 <div class="type-program__icon"></div>
               </a>
             </div>
@@ -209,7 +212,8 @@
               <h3 class="type-program__title">Набор массы</h3>
               <p class="type-program__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat
                 Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-              <a class="type-program__transition-catalog" href="#"> <span>каталог slim</span>
+              <a class="type-program__transition-catalog" href="#"> <span
+                  class="type-program__transition-catalog-text">каталог pro</span>
                 <div class="type-program__icon"></div>
               </a>
             </div>
@@ -279,12 +283,12 @@
           <div class="example__info">
             <div class="example__block">
               <div class="example__data">
-                <p class="example__quantity"> <span>5 кг</span></p>
-                <p class="example__quantity-description">Снижение веса</p>
+                <p class="example__quantity"> <span class="example__quantity-text">5 кг</span></p>
+                <p class="example__quantity-description">снижение веса</p>
               </div>
               <div class="example__data">
-                <p class="example__quantity"> <span>60 дней</span></p>
-                <p class="example__quantity-description">Затрачено времени</p>
+                <p class="example__quantity"> <span class="example__quantity-text">60 дней</span></p>
+                <p class="example__quantity-description">з атрачено времени</p>
               </div>
             </div>
             <p class="example__price">Затраты на питание: <span>15 000 РУБ. </span></p>
@@ -306,60 +310,63 @@
         <div class="example__image example__image-cat-little"></div>
       </div>
     </section>
+  </main>
 
-    <footer class="footer">
-      <div class="main-footer container">
-        <section class="contacts">
-          <div class="contacts__wrapper">
-            <h2 class="visually-hidden"> Контакты компании</h2>
-              <div class="contacts__info">
-                <p class="contacts__cooperation">приглашаем к сотрудничеству дилеров!</p>
-                <p class="contacts__address">ул. Большая
-                  Конюшенная, д. 19/8
-                  Санкт-Петербург</p>
-              </div>
-            <div class="contacts__map"></div>
+  <footer class="footer">
+    <div class="main-footer container">
+      <section class="contacts">
+        <div class="contacts__wrapper">
+          <h2 class="visually-hidden"> Контакты компании</h2>
+          <div class="contacts__info">
+            <p class="contacts__cooperation">приглашаем <br> к сотрудничеству дилеров!</p>
+            <p class="contacts__address"> <span>ул. Большая</span>
+              <span>Конюшенная, д. 19/8</span>
+              <span>Санкт-Петербург</span>
+            </p>
           </div>
-        </section>
-        <div class="main-footer__item">
-          <a class="main-footer__logo" href="#">
-            <svg class="main-footer__logo-image" width="143" height="27">
-              <use href="#logo-cat"></use>
-            </svg>
-          </a>
-          <ul class="main-footer__list">
-            <li class="main-footer__items">
-              <a class="main-footer__social" href="#">
-                <svg class="main-footer__logo-image" width="27" height="17">
-                  <use href="#logo-image-vk"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="main-footer__items">
-              <a class="main-footer__social" href="#">
-                <svg class="main-footer__logo-image" width="24" height="19">
-                  <use href="#logo-image-youtube"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="main-footer__items">
-              <a class="main-footer__social" href="#">
-                <svg class="main-footer__logo-image" width="20" height="18" viewBox="0 0 20 18">
-                  <use href="#logo-image-telegram"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
-          <a class="main-footer__html-link" href="#">
-            <p class="main-footer__html-text">HTML Academy</p>
-            <svg class="main-footer__html-logo" width="27" height="34">
-              <use href="#html-logo"></use>
-            </svg>
-          </a>
+          <div class="contacts__map"></div>
         </div>
-    </footer>
+      </section>
+      <div class="main-footer__item">
+        <a class="main-footer__logo" href="#">
+          <svg class="main-footer__logo-image" width="143" height="27">
+            <use href="#logo-cat"></use>
+          </svg>
+        </a>
+        <ul class="main-footer__list">
+          <li class="main-footer__items">
+            <a class="main-footer__social" href="#">
+              <svg class="main-footer__logo-image" width="27" height="17">
+                <use href="#logo-image-vk"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="main-footer__items">
+            <a class="main-footer__social" href="#">
+              <svg class="main-footer__logo-image" width="24" height="19">
+                <use href="#logo-image-youtube"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="main-footer__items">
+            <a class="main-footer__social" href="#">
+              <svg class="main-footer__logo-image" width="20" height="18" viewBox="0 0 20 18">
+                <use href="#logo-image-telegram"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+        <a class="main-footer__html-link" href="#">
+          <p class="main-footer__html-text">HTML Academy</p>
+          <svg class="main-footer__html-logo" width="27" height="34">
+            <use href="#html-logo"></use>
+          </svg>
+        </a>
+      </div>
+    </div>
+  </footer>
 
-    <script src="../source/js/script.js"></script>
+  <script src="../source/js/script.js"></script>
 </body>
 
 </html>
