--- a/source/form.html
+++ b/source/form.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
   <meta charset="UTF-8">
@@ -80,18 +80,18 @@
   <header class="container">
     <div class="main-header">
       <div class="main-header__wrapper">
-        <a class="main-header__logo" href="#">
+        <a class="main-header__logo" href="index.html">
           <picture>
             <source media="(min-width: 1440px)" srcset="img/logo-desktop.svg" width="202" height="59">
             <source media="(min-width: 768px)" srcset="img/logo-tablet.svg" width="174" height="51">
             <img class="main-header__logo-image" src="img/logo-mobile.svg" alt="Логотип" width="33" height="37">
           </picture>
-          <img class="main-header__logo-text" src="img/logo-text.png" alt="Логотип название" width="101" height="18">
+          <img class="main-header__logo-text" src="img/logo-text.webp" alt="Логотип название" width="101" height="18">
         </a>
       </div>
       <nav class="main-header__nav main-header__nav--opened main-header__nav--nojs">
         <button class="main-header__nav-toggle"><span class="visually-hidden">Открыть меню</span></button>
-        <div class="main-header__nav-wrapper">
+        <div class="main-header__nav-wrapper main-header__nav--nojs">
           <ul class="main-header__nav-list">
             <li class="main-header__nav-item">
               <a class="main-header__nav-link main-header__nav-link-catalog" href="index.html">
@@ -141,7 +141,8 @@
             <p class="program-selection__program-type">
               <label class="program-selection__program-type-label">
                 <input class="program-selection__program-type-value visually-hidden" type="checkbox" checked>
-                <span class="program-selection__program-type-value program-selection__program-mark"></span>
+                <span class="program-selection__program-type-value program-selection__program-mark">
+                </span>
                 <span class="program-selection__program-type-title">Похудение</span>
               </label>
             </p>
@@ -175,7 +176,7 @@
             </p>
             <p class="program-selection__contact program-selection__contact-phone">
               <label class="program-selection__contact-label" for="user-number">Телефон:*</label>
-              <input class="program-selection__contact-value program-selection__contact-value-phone" type="text"
+              <input class="program-selection__contact-value program-selection__contact-value-phone" type="number"
                 id="user-number" placeholder="8 (960) 900-60-90">
               <svg class="program-selection__contact-icon" width="15" height="16">
                 <use href="#icon-phone"></use>
@@ -235,54 +236,57 @@
 
   </main>
 
-  <footer class="main-footer container">
-    <section class="contacts">
-      <div class="contacts__wrapper">
-        <h2 class="visually-hidden"> Контакты компании</h2>
-        <div class="contacts__info contacts__info-catalog">
-          <p class="contacts__cooperation">приглашаем <br>к сотрудничеству дилеров!</p>
-          <p class="contacts__address"> <span>ул. Большая</span>
-            <span>Конюшенная, д. 19/8</span>
-            <span>Санкт-Петербург</span></p>
+  <footer>
+    <div class="main-footer container">
+      <section class="contacts">
+        <div class="contacts__wrapper">
+          <h2 class="visually-hidden"> Контакты компании</h2>
+          <div class="contacts__info">
+            <p class="contacts__cooperation">приглашаем <br> к сотрудничеству дилеров!</p>
+            <p class="contacts__address"> <span>ул. Большая</span>
+              <span>Конюшенная, д. 19/8</span>
+              <span>Санкт-Петербург</span>
+            </p>
+          </div>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.603628793782!2d30.318562737085166!3d59.93871911108934!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca3de3a1%3A0xba80b1be36549aba!2sHtml%20Academy!5e0!3m2!1sru!2sru!4v1674887312135!5m2!1sru!2sru" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
-        <div class="contacts__map"></div>
+      </section>
+      <div class="main-footer__item">
+        <a class="main-footer__logo" href="#">
+          <svg class="main-footer__logo-image" width="143" height="27">
+            <use href="#logo-cat"></use>
+          </svg>
+        </a>
+        <ul class="main-footer__list">
+          <li class="main-footer__items">
+            <a class="main-footer__social" href="#" aria="Ссылка на вконтакте">
+              <svg class="main-footer__logo-image" width="27" height="17">
+                <use href="#logo-image-vk"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="main-footer__items">
+            <a class="main-footer__social" href="#" aria="Ссылка на ютуб">
+              <svg class="main-footer__logo-image" width="24" height="19">
+                <use href="#logo-image-youtube"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="main-footer__items">
+            <a class="main-footer__social" href="#" aria="Ссылка на телеграм">
+              <svg class="main-footer__logo-image" width="20" height="18" viewBox="0 0 20 18">
+                <use href="#logo-image-telegram"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+        <a class="main-footer__html-link" href="https://up.htmlacademy.ru/profession/frontender/15/adaptive/27">
+          <p class="main-footer__html-text">HTML Academy</p>
+          <svg class="main-footer__html-logo" width="27" height="34">
+            <use href="#html-logo"></use>
+          </svg>
+        </a>
       </div>
-    </section>
-    <div class="main-footer__item">
-      <a class="main-footer__logo" href="#">
-        <svg class="main-footer__logo-image" width="143" height="27">
-          <use href="#logo-cat"></use>
-        </svg>
-      </a>
-      <ul class="main-footer__list">
-        <li class="main-footer__items">
-          <a class="main-footer__social" href="#">
-            <svg class="main-footer__logo-image" width="27" height="17">
-              <use href="#logo-image-vk"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="main-footer__items">
-          <a class="main-footer__social" href="#">
-            <svg class="main-footer__logo-image" width="24" height="19">
-              <use href="#logo-image-youtube"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="main-footer__items">
-          <a class="main-footer__social" href="#">
-            <svg class="main-footer__logo-image" width="20" height="18" viewBox="0 0 20 18">
-              <use href="#logo-image-telegram"></use>
-            </svg>
-          </a>
-        </li>
-      </ul>
-      <a class="main-footer__html-link" href="#">
-        <p class="main-footer__html-text">HTML Academy</p>
-        <svg class="main-footer__html-logo" width="27" height="34">
-          <use href="#html-logo"></use>
-        </svg>
-      </a>
     </div>
   </footer>
 
