--- a/source/index.html
+++ b/source/index.html
@@ -130,14 +130,14 @@
             <source media="(min-width: 768px)" srcset="img/logo-tablet.svg" width="174" height="51">
             <img class="main-header__logo-image" src="img/logo-mobile.svg" alt="Логотип" width="33" height="37">
           </picture>
-          <img class="main-header__logo-text" src="img/logo-text.png" alt="Логотип название" width="101" height="18">
+          <img class="main-header__logo-text" src="img/logo-text.webp" alt="Логотип название" width="101" height="18">
         </a>
       </div>
       <nav class="main-header__nav main-header__nav--opened main-header__nav--nojs">
         <button class="main-header__nav-toggle"><span class="visually-hidden">Открыть меню</span></button>
-        <div class="main-header__nav-wrapper">
+        <div class="main-header__nav-wrapper main-header__nav--nojs">
           <ul class="main-header__nav-list">
-            <li class="main-header__nav-item main-header__nav-item-index--active">
+            <li class="main-header__nav-item main-header__nav-index--active">
               <a class="main-header__nav-link" href="index.html">
                 Главная
               </a>
@@ -163,6 +163,8 @@
 
     <section class="promo">
       <div class="promo__background"></div>
+      <div class="promo__background-image"></div>
+      <div class="promo__background-base"></div>
       <div class="promo__wrapper container">
         <div class="promo__background-mobile"></div>
         <div class="promo__text">
@@ -178,7 +180,7 @@
           <img class="promo__production" src="img/index/production-mobile.png"
             srcset="img/index/production-mobile@2x.png 2x" alt="Пример продукции" width="280" height="270">
         </picture>
-        <button class="promo__button"> <span class="promo__button-text"> Подобрать программу</span></button>
+        <a href="form.html" class="promo__button"> <span class="promo__button-text"> Подобрать программу</span></a>
       </div>
     </section>
 
@@ -324,7 +326,7 @@
               <span>Санкт-Петербург</span>
             </p>
           </div>
-          <div class="contacts__map"></div>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.603628793782!2d30.318562737085166!3d59.93871911108934!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca3de3a1%3A0xba80b1be36549aba!2sHtml%20Academy!5e0!3m2!1sru!2sru!4v1674887312135!5m2!1sru!2sru" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
       </section>
       <div class="main-footer__item">
@@ -335,28 +337,28 @@
         </a>
         <ul class="main-footer__list">
           <li class="main-footer__items">
-            <a class="main-footer__social" href="#">
+            <a class="main-footer__social" href="#" aria="Ссылка на вконтакте">
               <svg class="main-footer__logo-image" width="27" height="17">
                 <use href="#logo-image-vk"></use>
               </svg>
             </a>
           </li>
           <li class="main-footer__items">
-            <a class="main-footer__social" href="#">
+            <a class="main-footer__social" href="#" aria="Ссылка на ютуб">
               <svg class="main-footer__logo-image" width="24" height="19">
                 <use href="#logo-image-youtube"></use>
               </svg>
             </a>
           </li>
           <li class="main-footer__items">
-            <a class="main-footer__social" href="#">
+            <a class="main-footer__social" href="#" aria="Ссылка на телеграм">
               <svg class="main-footer__logo-image" width="20" height="18" viewBox="0 0 20 18">
                 <use href="#logo-image-telegram"></use>
               </svg>
             </a>
           </li>
         </ul>
-        <a class="main-footer__html-link" href="#">
+        <a class="main-footer__html-link" href="https://up.htmlacademy.ru/profession/frontender/15/adaptive/27">
           <p class="main-footer__html-text">HTML Academy</p>
           <svg class="main-footer__html-logo" width="27" height="34">
             <use href="#html-logo"></use>
